login with facebook

--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -36,6 +36,7 @@
 
                         <div id="slider" class="event_image flexslider p-tb-30"> 
                             <div class="flex-viewport" style="">
+                            <!-- <div class="flex-viewport" style="overflow: hidden; position: relative; height: 599px;"> -->
                                 <ul class="slides" style="width: 1800%; margin-left: -868px;"><li class="clone" aria-hidden="true" style="width: 868px; float: left; display: block;">
                                         <a itemprop="image" href="" title="event-(19)" class="listing_img">		
                                             <img src="http://demo.templatic.com/eventum/../images/event/event-(19)-870x600.jpg" draggable="false">
@@ -90,6 +91,7 @@
                                     </li>
                                 </ul>
                             </div>
+                            <!-- </div> -->
                         </div>
 
                         <div id="event_image_gallery">
